--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -4,7 +4,7 @@
 
   
   "status": {
-    "text": "milrato.eu",
+    "text": "!help | milrato.eu",
     "type": "STREAMING", "COMMENT:": "TYPES ARE: PLAYING, STREAMING, WATCHING, LISTENING",
     "url": "https://twitch.tv/milratoDiscordBot"
   }
