--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "NzQyNjcyMDIxNDIyMzQyMTY1.XzJhOA.w4faNxi4UwZXJ3UxPfrPT_4_NGg",
+  "token": "",
   "prefix": "?",
 
 
@@ -15,8 +15,8 @@
   },
 
   "spotify": {
-    "clientSecret": "7eecbfee188e4904b63d737ea153b066",
-    "clientID": "a3939d643a8149f6a5011a6e6f8f1509"
+    "clientSecret": "",
+    "clientID": ""
   },
 
   "settings": {
@@ -36,7 +36,7 @@
     "lyrics_finder": true,         "COMMENT": "my suggestion is to use ksoft_api on true and paste in the api key u can sign up, until u get the key use lyrics_finder which is way weaker but better the nothing",
     "ksoft_api": {
       "use_this_instead": true,
-      "api_key": "694639638970789aded89f89f5fc1c12fccc26b3"
+      "api_key": ""
     }
   },
 
