--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@discordjs/opus": "^0.3.3",
     "@ksoft/api": "^3.1.9",
     "ascii-table": "0.0.9",
+    "bufferutil": "^4.0.3",
     "canvacord": "^5.0.8",
     "canvas": "^2.6.1",
     "colors": "^1.4.0",
@@ -19,6 +20,7 @@
     "got": "^11.8.1",
     "lyrics-finder": "^21.7.0",
     "nekos.life": "^2.0.7",
+    "utf-8-validate": "^5.0.4",
     "weather-js": "^2.0.0"
   },
   "devDependencies": {},
