--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,8 +1,6 @@
 {
-  "token": "",
-  "prefix": "?",
-
-
+  "token": "TOKEN",
+  "prefix": "!",
 
   "clientsettings": {
     "nodes": [
@@ -20,22 +18,23 @@
   },
 
   "settings": {
-    "COMMENT": "time_delay 0 === insta leave",
+       "COMMENT": "time_delay 0 === insta leave",
     "progressbar_emoji": "🔶",
     "leaveOnEmpty_Channel" : {
       "enabled": true,
-      "time_delay": 600 
+      "time_delay": 60000
     },
     "LeaveOnEmpty_Queue": {
       "enabled": true,
-      "time_delay": 10
-    }
+      "time_delay": 30000
+    },
+    "selfDeaf": true
   },
 
   "lyricssettings": {
     "lyrics_finder": true,         "COMMENT": "my suggestion is to use ksoft_api on true and paste in the api key u can sign up, until u get the key use lyrics_finder which is way weaker but better the nothing",
     "ksoft_api": {
-      "use_this_instead": true,
+      "use_this_instead": false,
       "api_key": ""
     }
   },
@@ -45,9 +44,9 @@
 
 
   "status": {
-    "text": "?help | milrato.eu",
+    "text": "!help | powered by milrato.eu",
     "type": "STREAMING", "COMMENT:": "TYPES ARE: PLAYING, STREAMING, WATCHING, LISTENING",
-    "url": "https://twitch.tv/milratoDiscordBot"
+    "url": "https://twitch.tv/milratodiscordbot"
   }
 
 }
