--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lavalink_music_bot",
-  "version": "3.2.7",
+  "name": "lava_music",
+  "version": "5.8.2",
   "description": "A Discord Bot made by: Tomato#6966",
-  "main": "index.js",
+  "main": "shard.js",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "@ksoft/api": "^3.1.9",
@@ -16,6 +16,8 @@
     "discord.js": "^12.5.1",
     "enmap": "^5.8.4",
     "erela.js": "^2.3.2",
+    "erela.js-deezer": "^1.0.5",
+    "erela.js-facebook": "^1.0.3",
     "erela.js-spotify": "^1.2.0",
     "got": "^11.8.1",
     "lyrics-finder": "^21.7.0",
@@ -29,5 +31,33 @@
     "start": "node index.js"
   },
   "author": "Tomato#6966",
-  "license": "ISC"
+  "license": "GPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tomato6966/discord-js-lavalink-Music-Bot-erela-js.git"
+  },
+  "keywords": [
+    "lavalink",
+    "music",
+    "discord",
+    "discordjs",
+    "erela.js",
+    "music",
+    "bot",
+    "lava",
+    "lava",
+    "music",
+    "audio",
+    "mp3",
+    "radio",
+    "radiostation",
+    "stream",
+    "premium",
+    "reaction",
+    "reactions"
+  ],
+  "bugs": {
+    "url": "https://github.com/Tomato6966/discord-js-lavalink-Music-Bot-erela-js/issues"
+  },
+  "homepage": "https://milrato.eu"
 }
