--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lava_music",
-  "version": "5.0.2",
+  "version": "5.8.2",
   "description": "A Discord Bot made by: Tomato#6966",
   "main": "shard.js",
   "dependencies": {
@@ -16,6 +16,8 @@
     "discord.js": "^12.5.1",
     "enmap": "^5.8.4",
     "erela.js": "^2.3.2",
+    "erela.js-deezer": "^1.0.5",
+    "erela.js-facebook": "^1.0.3",
     "erela.js-spotify": "^1.2.0",
     "got": "^11.8.1",
     "lyrics-finder": "^21.7.0",
