--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -28,7 +28,8 @@
       "enabled": true,
       "time_delay": 30000
     },
-    "selfDeaf": true
+    "selfDeaf": true,
+    "serverDeaf": true
   },
 
   "lyricssettings": {
