--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,1 @@
-patreon: MilratoDevelopment,
-custom: ['milrato.eu', 'https://discord.gg/FQGXbypRf8', 'bittmax.de', 'https://mc-host24.de/user/affiliate/3121' ]
+custom: ['https://milrato.eu', 'https://dc.milrato.eu', 'https://bero.milrato.eu', 'https://bittmax.milrato.eu' ]
