--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['https://milrato.eu', 'https://dc.milrato.eu', 'https://bero.milrato.eu', 'https://bittmax.milrato.eu' ]
+custom: ['milrato.eu', 'dc.milrato.eu', 'bero.milrato.eu', 'bittmax.milrato.eu' ]
