--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "TOKEN",
-  "prefix": "!",
+  "token": "ODc0NDkzNDAzMjYwNDA3ODg4.YRHxcg.QIGO4XrWhZsbBZsWlwydzKuaAfw",
+  "prefix": "/",
 
   "clientsettings": {
     "nodes": [
