--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['milrato.eu', 'dc.milrato.eu', 'bero.milrato.eu', 'bittmax.milrato.eu' ]
+custom: ['milrato.dev', 'dc.milrato.dev', 'bero.milrato.dev', 'bittmax.milrato.dev' ]
