--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "discord.js": "^13.3.1",
     "enmap": "^5.8.7",
     "erela.js": "^2.3.3",
+    "erela.js-apple": "^1.2.5",
     "erela.js-deezer": "^1.0.7",
     "erela.js-facebook": "^1.0.4",
     "erela.js-spotify": "^1.2.0",
@@ -19,7 +20,6 @@
   "version": "8.0.0",
   "description": "An advanced Discord.js Music Bot, which connects via Lavalink and erela.js! Including Slash-Commands and a BUTTON-BASED-REQUEST-SYSTEM",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ."
