Fix play command not working due missing config parameter

--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -11,15 +11,19 @@
       "type": "PLAYING",
       "url": "https://twitch.tv/#"
    },
-   "clientsettings": {
-      "nodes": [
-         {
-            "host": "localhost",
-            "port": 2333,
-            "password": "youshallnotpass"
-         }
-      ]
-   },
+  "clientsettings": {
+    "nodes": [
+      {
+        "host": "localhost",
+        "port": 2333,
+        "password": "youshallnotpass"
+      }
+    ]
+  },
+
+  "settings": {
+    "selfDeaf": true
+  },
 
    "spotify": {
       "clientID": "",
