--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['milrato.dev', 'dc.milrato.dev', 'bero.milrato.dev', 'bittmax.milrato.dev' ]
+custom: ['donate.milrato.dev', 'discord.gg/milrato', 'bero.milrato.dev', 'bittmax.milrato.dev' ]
